--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,8 @@
         <link rel="stylesheet" href="/CSS/profil.css">
         <link rel="stylesheet" href="/CSS/listingEmployee.css">
         <link rel="stylesheet" href="/CSS/addEmployee.css">
+        <link rel="stylesheet" href="/CSS/documents.css">
+        <link rel="stylesheet" href="/CSS/addDocument.css">
         <link rel="stylesheet" href="/CSS/navbar.css">
         <link rel="stylesheet" href="/CSS/footer.css">
         <link rel="stylesheet" href="/CSS/employeeCard.css">
