--- a/views/pages/admin/voir-plus.ejs
+++ b/views/pages/admin/voir-plus.ejs
@@ -121,7 +121,7 @@
 
             <!-- Actions administrateur -->
             <div class="admin-profile-actions">
-                <a href="#" class="admin-btn edit-btn">
+                <a href="/updateEmployee/<%= user_.id_employee %>" class="admin-btn edit-btn">
                     <i class="fas fa-edit"></i>
                     <span>Modifier</span>
                 </a>
